--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Our project repo
+https://github.com/lyonx/Group-Work-0
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,25 +10,102 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <title>Document</title>
+    <title>New York Times Search</title>
 
     <!--===== LOCAL LINKS =====-->
     <!-- Links local CSS -->
-    <link type="text/css" href="assets/css/style.css" rel="stylesheet">
+    <style>
+        .wrapper {
+            border: 2px solid #00008B;
+        }
+        .jumbotron {
+            margin: auto;
+            color: white;
+            background-color: #00008B;
+        }
+    </style>
     <!-- Links local JS -->
-    <script type="text/javascript" src="assets/javascript/logic.js"></script>
+  <script>
+  $(document).ready(function(){
+    $(this).on("click", function(){
+        alert("button clicked");
+    });
+});
+  </script>
 
 </head>
 
 <body>
     <div class="container">
+        <div class="wrapper">
         <div class="jumbotron">
-            <h1>New York Times Search</h1>
+            <h2>New York Times Search</h2>
         </div>
-        <div class="form">
+        </div><br>
+        <div class="wrapper">
+            <form>
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <a class="navbar-brand" href="#">
+                                <img alt="Search Parameters" src="...">
+                            </a>
+                        </div>
+                    </div>
+                </nav>
+                <div class="form-group">
+                    <label class="col-form-label" for="formGroupExampleInput">Search Term:</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                </div>
+                <div class="form-group">
+                    <label class="col-form-label" for="formGroupExampleInput2">Number of Records to Retrieve:</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                </div>
+                <div class="form-group">
+                    <label class="col-form-label" for="formGroupExampleInput">Start Year (Optional):</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                </div>
+                <div class="form-group">
+                    <label class="col-form-label" for="formGroupExampleInput2">End Year (Optional):</label>
+                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                </div>
+            </form>
+            <a class="btn btn-default Btn1" href="#" role="button">Search</a>
+            <button class="btn btn-default btn2" type="submit">Clear Results</button>
+
+        </div>
+        <br>
+
+        <div class="wrapper">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="#">
+                            <img alt="Top Articles" src="...">
+                        </a>
+                    </div>
+                </div>
+            </nav>
+            <br>
+
+            <div class="articles">
+                <!--we need to figure out how to populate-->
+            </div>
 
         </div>
     </div>
 </body>
 
 </html>
+<!-- 
+
+API KEY
+59a6da904e9548caa79d6f29dce2f7b8
+
+LOCAL VARIABLES
+var searchInput = str
+var numRecords = num
+var startYr = num
+var endYr = num 
+
+-->
