--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-Our project repo
-https://github.com/lyonx/Group-Work-0
+Our project repo https://github.com/lyonx/Group-Work-0
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,12 +11,18 @@ https://github.com/lyonx/Group-Work-0
         crossorigin="anonymous">
     <title>New York Times Search</title>
 
+    <!-- ===== EXT LINKS ===== -->
+    <!-- JQ Link -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
+
     <!--===== LOCAL LINKS =====-->
     <!-- Links local CSS -->
     <style>
         .wrapper {
             border: 2px solid #00008B;
         }
+
         .jumbotron {
             margin: auto;
             color: white;
@@ -25,30 +30,25 @@ https://github.com/lyonx/Group-Work-0
         }
     </style>
     <!-- Links local JS -->
-  <script>
-  $(document).ready(function(){
-    $(this).on("click", function(){
-        alert("button clicked");
-    });
-});
-  </script>
+    <script src="assets/javascript/logic.js"></script>
 
 </head>
 
 <body>
     <div class="container">
         <div class="wrapper">
-        <div class="jumbotron">
-            <h2>New York Times Search</h2>
+            <div class="jumbotron">
+                <h2>New York Times Search</h2>
+            </div>
         </div>
-        </div><br>
+        <br>
         <div class="wrapper">
             <form>
                 <nav class="navbar navbar-default">
                     <div class="container-fluid">
                         <div class="navbar-header">
                             <a class="navbar-brand" href="#">
-                                <img alt="Search Parameters" src="...">
+                                <img alt="Search Parameters">
                             </a>
                         </div>
                     </div>
@@ -81,7 +81,7 @@ https://github.com/lyonx/Group-Work-0
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <a class="navbar-brand" href="#">
-                            <img alt="Top Articles" src="...">
+                            <img alt="Top Articles" src="">
                         </a>
                     </div>
                 </div>
